--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -11,14 +11,12 @@
   display: inline-block;
   margin-bottom: 0.25em;
   padding: 0.5em 1em;
-  color: #fff !important;
   font-family: $sans-serif;
   font-size: $type-size-6;
   font-weight: bold;
   text-align: center;
   text-decoration: none;
   background-color: $primary-color;
-  border: 0 !important;
   border-radius: $border-radius;
   cursor: pointer;
 
@@ -32,6 +30,20 @@
 
   .icon + .hidden {
     margin-left: -0.5em; /* override for hidden text*/
+  }
+
+
+  /* Buttons icon without transition */
+  .bi {
+    -webkit-transition: none;
+    transition: none;
+  }
+
+  /* Buttons icon hover fall back to default font color */
+  &:hover {
+    .bi {
+      color: inherit !important;  
+    }
   }
 
   /* fills width of parent container */
