--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -46,7 +46,7 @@ $type-size-8                : 0.625em;  // ~10px
 $masthead-height            : 70px;
 
 /* Sidebar properties */
-$sidebar-screen-min-width   : 1024px;
+$sidebar-screen-min-width   : 992px;
 $sidebar-link-max-width     : 250px;
 
 
@@ -83,6 +83,7 @@ $flickr-color               : #ff0084;
 $foursquare-color           : #0072b1;
 $github-color               : #171516;
 $google-plus-color          : #dd4b39;
+$google-scholar-color       : #4285f4;
 $instagram-color            : #517fa4;
 $kaggle-color               : #20c0ff;
 $lastfm-color               : #d51007;
@@ -125,7 +126,7 @@ $x-large                    : 1800px;
 $small                      : 600px !default;
 $medium                     : 768px !default;
 $medium-wide                : 900px !default;
-$large                      : 925px !default;
+$large                      : 992px !default;
 $x-large                    : 1280px !default;
 
 /*
