--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -51,11 +51,11 @@
 .archive__item-authors {
   a {
     color: inherit;
-    text-decoration: none;
+    text-decoration: none !important;
   }
 
   a:hover {
-    text-decoration: underline;
+    text-decoration: underline !important;
   }
 }
 
