--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -12,25 +12,32 @@ div.highlighter-rouge, figure.highlight {
   box-shadow: $box-shadow;
   font-size: $type-size-4;
 
-  &:before {
+  span {
     position: absolute;
     top: 0;
     right: 0;
-    padding: 0.5em;
-    background-color: $lighter-gray;
-    content: "\f121";
-    font-family: "Font Awesome 6 Free" !important;
-    font-size: $type-size-6;
-    line-height: 1;
-    text-transform: none;
-    speak: none;
+    &::before {
+      padding: 0.5em;
+      background-color: $lighter-gray;
+      content: "\f759";
+      font-family: bootstrap-icons !important;
+      font-size: $type-size-6;
+      line-height: 1;
+      text-transform: none;
+      speak: none;
+      cursor: pointer;
+    }
+
+    &:hover {
+      color: var(--bs-link-hover-color);
+    }
   }
 
   .highlight {
     margin: 0;
     font-family: $monospace;
     font-size: $type-size-6;
-    line-height: 1.8;
+    line-height: normal;
   }
 }
 
