--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -12,24 +12,47 @@ div.highlighter-rouge, figure.highlight {
   box-shadow: $box-shadow;
   font-size: $type-size-4;
 
-  span {
+  .highlight-toolbar {
     position: absolute;
     top: 0;
     right: 0;
-    &::before {
-      padding: 0.5em;
-      background-color: $lighter-gray;
-      content: "\f759";
+    cursor: pointer;
+
+    & > *::before {
       font-family: bootstrap-icons !important;
+      background-color: $lighter-gray;
       font-size: $type-size-6;
       line-height: 1;
+      padding: 0.5em;
       text-transform: none;
       speak: none;
-      cursor: pointer;
     }
 
-    &:hover {
-      color: var(--bs-link-hover-color);
+    & > :hover {
+      color: var(--bs-link-hover-color) !important;
+    }
+
+    & > :not(:first-child)::before {
+      padding-left: 0.75em !important;
+    }
+
+    .copy-to-clipboard::before {
+      content: "\f759";
+    }
+
+    .copy-to-clipboard.copied::before {
+      color: var(--bs-success-rgb);
+      content: "\f272";
+    }
+
+    .download {
+      text-decoration: none;
+      color: inherit;
+
+      &::before {
+        content: "\f30a";
+      }
+
     }
   }
 
