--- a/_includes/archive-single-publication.html
+++ b/_includes/archive-single-publication.html
@@ -57,7 +57,7 @@
 
     {% if post.authors %}
       <span class="archive__item-authors authors">
-      {% include authors-list.html %}
+      {% include authors-list.html post=post %}
       </span>
     {% endif %}
     
@@ -148,8 +148,8 @@
               {{ post.citation | markdownify }}
             </small>
           {% else %}
-            {% capture bibtex %}{% include bibtex.html %}{% endcapture %}
-            {% capture bib_citekey %}{% include bibtex-citekey.html %}{% endcapture %}
+            {% capture bibtex %}{% include bibtex.html post=post %}{% endcapture %}
+            {% capture bib_citekey %}{% include bibtex-citekey.html post=post %}{% endcapture %}
             <span copy-to-clipboard="true" download="{{ bib_citekey | strip }}.bib">
               {{ bibtex | markdownify }}
             </span>
