--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -46,7 +46,7 @@ div.highlighter-rouge, figure.highlight {
     }
 
     .download {
-      text-decoration: none;
+      text-decoration: none !important;
       color: inherit;
 
       &::before {
