--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -5,12 +5,15 @@
 div.highlighter-rouge, figure.highlight {
   position: relative;
   margin-bottom: 1em;
-  padding: 1em;
   border: 1px solid $border-color;
   border-radius: $border-radius;
   background-color: $code-background-color;
   box-shadow: $box-shadow;
   font-size: $type-size-4;
+
+  pre { 
+    padding: 2em;
+  }
 
   .highlight-toolbar {
     position: absolute;
