Fix share button

--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -91,7 +91,7 @@ layout: default
         {% endif %}
 
         {% if page.share %}
-          <a href="#share" id="share-page" class="{{ btn_style }} btn btn-outline-secondary btn-sm text-decoration-none"><i class="bi bi-share-fill"></i></a>
+          <button id="share-page" class="{{ btn_style }} btn btn-outline-secondary btn-sm text-decoration-none"><i class="bi bi-share-fill"></i></a>
         {% endif %}
         
         </div>
