--- a/_includes/author-badge.html
+++ b/_includes/author-badge.html
@@ -1,4 +1,10 @@
+{%- if include.author contains '{' -%}
+{% assign author = include.author | split: '{' | first %}
+{% assign notes = include.author | split: '{' | last | remove: '}' | split: ',' | join: '' %}
+{%- else -%}
 {% assign author = include.author %}
+{% assign notes = '' %}
+{%- endif -%}
 {%- if site.data.authors contains author -%}
     {% assign author = site.data.authors[author] %}
     {% assign name = author.name | split: "," %}
@@ -6,12 +12,12 @@
     {% assign first_name = name | last %}
     {% assign name = first_name | append: " " | append: last_name %}
     {%- if author.uri -%}
-        <a href="{{ author.uri }}">{{ name }}</a>
+        <a href="{{ author.uri }}">{{ name }}</a>{% if include.show_notes %}<sup>{{ notes }}</sup>{% endif %}
     {%- else -%}
-        {{ name }}
+        {{ name }}{% if include.show_notes %}<sup>{{ notes }}</sup>{% endif %}
     {%- endif -%}
     {%- if author.orcid -%}&nbsp;<a href="https://orcid.org/{{ author.orcid }}"><i class="ai ai-orcid" aria-hidden="true"></i></a>{%- endif -%}
 {%- else -%}
     {% assign name = author | split: ", " %}
-    {{ name | last }} {{ name | first }}
+    {{ name | last }} {{ name | first }}{% if include.show_notes %}<sup>{{ notes }}</sup>{% endif %}
 {%- endif -%}
