--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -43,6 +43,29 @@
   }
 }
 
+.page__authors {
+  a {
+    color: inherit;
+    text-decoration: none !important;
+  }
+
+  a:hover {
+    text-decoration: underline !important;
+  }
+
+  .author-badge {
+    margin-right: 0.5em;
+    margin-left: 0.5em;
+  }
+}
+
+.page__author-notes { 
+  .author-note {
+    margin-right: 0.5em;
+    margin-left: 0.5em;
+  }
+}
+
 .page__lead {
   font-family: $global-font-family;
   font-size: $type-size-4;
