--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -128,6 +128,24 @@
     margin-top: -1.5em;
     padding-left: 1.25rem;
   }
+
+  *:has(.back-to-top) {
+    display: flex;
+    align-items: center;
+  }
+
+  .back-to-top {
+    font-family: 'Font Awesome 6 Free';
+    font-weight: 400;
+    margin-left: 0.75em;
+    font-size: 0.75em;
+    color: var(--bs-gray-300);
+    cursor: pointer;
+
+    &::before {
+      content: "\f35b";
+    }
+  }
 }
 
 .page__hero {
