--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,6 +1,9 @@
 /* ==========================================================================
    SINGLE PAGE/POST
    ========================================================================== */
+@import '../node_modules/bootstrap/scss/functions';
+@import '../node_modules/bootstrap/scss/variables';
+@import '../node_modules/bootstrap/scss/mixins';
 
 #main {
   @include container;
@@ -45,7 +48,6 @@
 
 .page__authors {
   a {
-    color: inherit;
     text-decoration: none !important;
   }
 
@@ -95,14 +97,88 @@
     }
   }
 
-  a:not(.btn){
-    text-decoration: underline;
+  table:has(img) {
+    border: 0px;
+    margin: auto;
+    max-width: 90vw;
 
-    &:hover {
-      text-decoration: underline;
+    img {
+      margin-bottom: 1em;
+    }
 
-      img {
-        box-shadow: 0 0 10px rgba(#000, 0.25);
+    thead { 
+      display: none;
+    }
+
+    tbody {
+      @include make-container();
+    }
+
+    tr {
+      @include make-row();
+      justify-content: center;
+    }
+
+    td {
+      @include make-col-ready();
+      max-width: 75%;
+      
+      /* default */
+      @include make-col(3);
+
+      /* 1, 2 items - small screen */
+      &:first-child:nth-last-child(1),
+      &:first-child:nth-last-child(2),
+      &:first-child:nth-last-child(1) ~ *,    
+      &:first-child:nth-last-child(2) ~ *  {
+          @include make-col(12);
+      }
+
+      /* 3, 4 items - small screen */
+      &:first-child:nth-last-child(3),
+      &:first-child:nth-last-child(4),
+      &:first-child:nth-last-child(3) ~ *,    
+      &:first-child:nth-last-child(4) ~ *  {
+          @include make-col(6);
+      }
+
+      /* 5, 6 items - small screen */
+      &:first-child:nth-last-child(5),
+      &:first-child:nth-last-child(6),
+      &:first-child:nth-last-child(5) ~ *,
+      &:first-child:nth-last-child(6) ~ * {
+        @include make-col(4);
+      }
+
+      @include media-breakpoint-up(sm) {
+        /* 2 items */
+        &:first-child:nth-last-child(2),
+        &:first-child:nth-last-child(2) ~ * {
+          @include make-col(6);
+        }
+      }
+
+      @include media-breakpoint-up(md) {
+        /* 3 items */
+        &:first-child:nth-last-child(3),
+        &:first-child:nth-last-child(3) ~ * {
+          @include make-col(4);
+        }
+
+        /* 4 items */
+        &:first-child:nth-last-child(4),
+        &:first-child:nth-last-child(4) ~ * {
+          @include make-col(4);
+        }
+        &:first-child:nth-last-child(4),
+        &:first-child:nth-last-child(4) ~ *:nth-child(3) {
+          margin-left: 12.5%;
+        }
+        
+        &:first-child:nth-last-child(4) ~ *:nth-child(2),
+        &:first-child:nth-last-child(4) ~ *:nth-child(4) {
+          margin-right: 12.5%;
+        }
       }
     }
   }
